# ppopp26-artifact

./: .gitignore  CMakeLists.txt  LDE(pad on CPU).cu  LICENSE  README.md  lde.cu  main.cu  miss_ops.cu  ntt.cu  readme.md  test.cu  test_ntt.cu
LDE/: CMakeLists.txt
NTT/: CMakeLists.txt
PLONK/: hello.cu  hello.hpp
PLONK/blst/: .gitignore  CMakeLists.txt  README.md
PLONK/blst/include/: blst_t.hpp
PLONK/blst/src/asm/: ctq_inverse_mod_384-x86_64.pl  mulq_mont_256-x86_64.pl  mulq_mont_384-x86_64.pl  sha256-portable-x86_64.pl  sha256-x86_64.pl
PLONK/blst/src/coff/: ctq_inverse_mod_384-x86_64.s  mulq_mont_256-x86_64.s  mulq_mont_384-x86_64.s  sha256-portable-x86_64.s  sha256-x86_64.s
PLONK/blst/src/elf/: ctq_inverse_mod_384-x86_64.s  mulq_mont_256-x86_64.s  mulq_mont_384-x86_64.s  sha256-portable-x86_64.s  sha256-x86_64.s
PLONK/blst/src/mach-o/: ctq_inverse_mod_384-x86_64.s  mulq_mont_256-x86_64.s  mulq_mont_384-x86_64.s  sha256-portable-x86_64.s  sha256-x86_64.s
PLONK/plonk_core/: utils.cu
PLONK/plonk_core/lookup/: multiset.cu
PLONK/plonk_core/src/permutation/: constants.cu  mod.cu
PLONK/plonk_core/src/proof_system/: linearisation.cu  permutation.cu  pi.cu  quotient.cu
PLONK/plonk_core/src/proof_system/widget/: arithmetic.cu  curve_addition.cu  custom_class.cu  fixed_base_scalar_mul.cu  logic.cu  lookup.cu  mod.cu  range.cu
PLONK/src/: arithmetic.cu  arithmetic.cuh  composer.cu  domain.cu  domain.cuh  gen_proof.cu  gen_proof.cuh  load.cu  point.cu  serialize.cu  serialize.cuh  structure.cuh
PLONK/src/KZG/: kzg10.cu  kzg10.cuh
PLONK/src/bls12_381/: edwards.cu  edwards.cuh  edwards.h  fq.cuh  fq.hpp  fr.cuh  fr.hpp
PLONK/src/plonk_core/: utils.cu  utils.cuh
PLONK/src/plonk_core/src/constaraint_system/: hash.cu  hash.h
PLONK/src/plonk_core/src/permutation/: constants.cu  constants.cuh  mod.cu  mod.cuh
PLONK/src/plonk_core/src/proof_system/: linearisation.cu  linearisation.cuh  mod.cuh  permutation.cu  pi.cu  pi.cuh  quotient.cu  quotient.cuh
PLONK/src/plonk_core/src/proof_system/widget/: arithmetic.cu  curve_addition.cu  custom_class.cu  fixed_base_scalar_mul.cu  logic.cu  lookup.cu  mod.cu  mod.cuh  range.cu
PLONK/src/transcript/: flags.hpp  strobe.cpp  strobe.h  transcript.cu  transcript.cuh  transcript.h
PLONK/utils/: function.cu  function.cuh  zk_function.cu
PLONK/utils/mont/cpu/: curve_def.h  mont_arithmetic.cpp  mont_arithmetic.h
PLONK/utils/mont/cpu/ff/: bls12-377.hpp  bls12-381.hpp
PLONK/utils/mont/cuda/: curve_def.cuh  mont_arithmetic.cu  mont_arithmetic.cuh
PLONK/utils/mont/cuda/ff/: bls12-377.hpp  bls12-381.hpp  mont_t.cuh
PLONK/utils/zkp/cpu/: collect.h  msmcollect.cpp  msmcollect.h  msmcollect.hpp
PLONK/utils/zkp/cpu/ec/: jacobian_t.hpp  xyzz_t.hpp
PLONK/utils/zkp/cuda/: zksnark.cuh  zksnark_compute_lookup_constraint.cu  zksnark_compute_permutation_constraint.cu  zksnark_compute_query_table.cu  zksnark_compute_quotient.cu  zksnark_comute_gate_constraint.cu  zksnark_lookup.cu  zksnark_msm.cu  zksnark_ntt.cu  zksnark_padding.cu
PLONK/utils/zkp/cuda/ec/: jacobian_t.hpp  xyzz_t.hpp
PLONK/utils/zkp/cuda/sppark_msm/: batch_addition.cuh  pippenger.cuh  sort.cuh
PLONK/utils/zkp/cuda/zksnark_ntt/: ntt_config.h
PLONK/utils/zkp/cuda/zksnark_ntt/ntt_kernel/: algorithm.cuh  ct_mixed_radix_wide.cuh  gs_mixed_radix_wide.cuh  kernels.cuh  ntt.cuh
PLONK/utils/zkp/cuda/zksnark_ntt/parameters/: bls12_377.h  bls12_381.h  parameters.cuh
caffe/: common.hpp  interface.cpp  interface.hpp  syncedmem.cpp  syncedmem.hpp
caffe/utils/: math_functions.cpp  math_functions.hpp
miss_ops/: CMakeLists.txt
